# picochan

./: LICENSE.txt  README.md
docs/html/: annotated.html  annotated_dup.js  bsize_8h.html  bsize_8h.js  bsize_8h_source.html  bufferset_8h_source.html  callback_8h_source.html  ccw_8h.html  ccw_8h.js  ccw_8h_source.html  ccw__fetch_8h_source.html  channel_8h.html  channel_8h.js  channel_8h_source.html  channel_program_page.html  chop_8h_source.html  classes.html  compiling_page.html  css_8h.html  css_8h.js  css_8h_source.html  css__internal_8h.html  css__internal_8h.js  css__internal_8h_source.html  css__trace_8h_source.html  css_api_page.html  cu_8h.html  cu_8h.js  cu_8h_source.html  cu__internal_8h_source.html  cu_api_page.html  cus__trace_8h_source.html  design_page.html  dev__api_8h.html  dev__api_8h.js  dev__api_8h_source.html  dev__sense_8h.html  dev__sense_8h.js  dev__sense_8h_source.html  dev__status_8h.html  (+207 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  files_0.js  files_1.js  files_2.js  files_4.js  files_6.js  files_7.js  functions_0.js  functions_1.js  groups_0.js  groups_1.js  pages_0.js  pages_1.js  pages_10.js  pages_11.js  pages_2.js  pages_3.js  pages_4.js  (+23 more)
examples/blink/blink_memchan/: CMakeLists.txt  blink_memchan.c
examples/blink/blink_piocss/: CMakeLists.txt  blink_piocss.c
examples/blink/blink_piocu/: CMakeLists.txt  blink_piocu.c
examples/blink/blink_uartcss/: CMakeLists.txt  blink_uartcss.c
examples/blink/blink_uartcu/: CMakeLists.txt  blink_uartcu.c
examples/blink/css/: CMakeLists.txt
examples/blink/cu/: CMakeLists.txt  blink_cu.c  blinktestcu.c
examples/cardkb/: cardkb_api.h
examples/cardkb/cardkb_memchan/: CMakeLists.txt  cardkb_memchan.c
examples/cardkb/cardkb_uartcss/: CMakeLists.txt  cardkb_uartcss.c
examples/cardkb/cardkb_uartcu/: CMakeLists.txt  cardkb_uartcu.c
examples/cardkb/cu/: cardkb_cu.c  cardkb_i2c.c
examples/gpio/: gd_api.h  gd_channel.h  gd_debug.h  gpio_cu_dev.md
examples/gpio/css/: CMakeLists.txt  gdtest1css.c
examples/gpio/cu/: CMakeLists.txt  gd_config.h  gd_cu.c  gd_cu.h  gd_debug.h  gd_dev.h  gd_pins.c  gd_pins.h  gdtest1cu.c  uart_chan.c  uart_chan.h
examples/gpio/gpio_memchan/: CMakeLists.txt  gpio_memchan.c
examples/gpio/gpio_piocss/: CMakeLists.txt  gpio_piocss.c
examples/gpio/gpio_piocu/: CMakeLists.txt  gpio_piocu.c
examples/gpio/gpio_uartcss/: CMakeLists.txt  gpio_uartcss.c
examples/gpio/gpio_uartcu/: CMakeLists.txt  gpio_uartcu.c
examples/mqtt/: md_api.h
examples/mqtt/cu/: mqtt_cu.c  mqtt_util.c
examples/mqtt/mqtt_memchan/: CMakeLists.txt  lwipopts.h  mqtt_memchan.c
examples/mqtt_full/: css_example.c  mqtt_api.h  mqtt_cu.h  mqtt_cu_api.h
examples/mqtt_full/cu/: ccw.c  ccw_buffers.c  ccw_global.c  ccw_ring.c  incoming.c  md_ccw.h  md_tmbuf.c  md_tmbuf.h  mqtt_cu.c  mqtt_cu.h  mqtt_cu_internal.h  mqtt_util.h  tasks.c
examples/mqtt_full/mqtt_full_memchan/: CMakeLists.txt  lwipopts.h  lwippools.h  mqtt_full_memchan.c
examples/mqtt_full/mqtt_full_piocss/: CMakeLists.txt  mqtt_full_piocss.c
examples/mqtt_full/mqtt_full_piocu/: CMakeLists.txt  mqtt_full_piocu.c
src/picochan/: CMakeLists.txt  api-notes.txt
src/picochan/base/: CMakeLists.txt
src/picochan/base/bsize/: bsize.c
src/picochan/base/dmachan/: dmachan.c  dmachan.h  dmachan_internal.h  dmachan_trace.h  irq.c  mem_peer.c  mem_peer.h  mem_rx_channel.c  mem_tx_channel.c  memchan.c  memchan_internal.h  pio_rx_channel.c  pio_tx_channel.c  piochan.c  piochan.h  piochan.pio  rx_channel.c  tx_channel.c  uart.c  uart_rx_channel.c  uart_tx_channel.c  uartchan.c
src/picochan/base/include/picochan/: bsize.h  ccw.h  dev_sense.h  dev_status.h  dmachan.h  dmachan_defs.h  ids.h  intcode.h  scsw.h  trc.h  trc_record_types.h  trc_records.h  txsm_state.h
src/picochan/base/proto/: chop.h  packet.h  payload.c  payload.h
src/picochan/base/trc/: bufferset.h  records.h  trace.c  trace.h  trace_lock.h
src/picochan/base/txsm/: txsm.c  txsm.h
src/picochan/css/: CMakeLists.txt  api.c  api_extra.c  ccw_fetch.c  ccw_fetch.h  channel.c  channel.h  css-api-notes.txt  css.c  css_cu.c  css_cu.h  css_internal.h  css_trace.h  irq.c  isc.c  notify.c  rx_handle.c  schib_dlist.c  schib_dlist.h  schib_func.c  schib_internal.h  schib_response.c  schibs_lock.h  tx_handle.c  ua_dlist.c  ua_slist.c  uart_cu.c  uartcu.c
src/picochan/css/include/picochan/: css.h  intcode.h  pmcw.h  schib.h  scsw.h
src/picochan/cu/: CMakeLists.txt  callback.c  callback.h  cu-api-notes.txt  cu.c  cu_internal.h  cus_trace.h  dev_api.c  devibs_lock.h  irq.c  rx_handle.c  tx_commands.c  tx_handle.c  uart_cu.c  uartcu.c
src/picochan/cu/include/picochan/: cu.h  dev_api.h  dev_sense.h  devib.h
src/picochan/docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  DoxygenLayout.xml  channel_program.md  compiling.md  css_api.md  cu_api.md  design.md  mainpage.md  tracing.md
src/picochan/hldev/: CMakeLists.txt  hldev.c  hldev_trace.h
src/picochan/hldev/include/picochan/: hldev.h
tools/pch_dump_trace/: Makefile  format.c  format.h  pch_dump_trace.c
